@@ -588,6 +588,8 @@ functionality that can be directly applied to twill.</li>
 <blockquote>
 <ul class="simple">
 <li>twill ignores robots.txt.</li>
+<li>http-equiv=refresh headers are handled immediately, independent of the
+'pause' component of the 'content' attribute.</li>
 <li>twill does not understand javascript.</li>
 </ul>
 </blockquote>
@@ -596,13 +598,7 @@ functionality that can be directly applied to twill.</li>
 <div class="section" id="future-plans">
 <h1><a class="toc-backref" href="#id35" name="future-plans">Future Plans</a></h1>
 <p>TODO:</p>
-<p>0.8 release:</p>
-<blockquote>
-<ol class="arabic simple">
-<li>HTTP-EQUIV refresh/redirect commands w/in mechanize? (issola.caltech.edu/~t/transfer/redir-test.html)</li>
-</ol>
-</blockquote>
-<p>after that:</p>
+<p>after 8.0:</p>
 <blockquote>
 <ol class="arabic simple">
 <li>break &quot;unit tests&quot; down into smaller units.</li>
